deps/LAGraph/include/LAGraphX.h

LAGRAPHX_PUBLIC
GrB_Info LAGraph_Random_Matrix    
(
    GrB_Matrix *A,      
    GrB_Type type,      
    GrB_Index nrows,    
    GrB_Index ncols,    
    double density,     
    uint64_t seed,      
    char *msg
) ;
typedef enum
{
    LAGraph_unknown_kind = -1,  
    LAGraph_matrix_kind = 0,    
    LAGraph_vector_kind = 1,    
    LAGraph_text_kind = 2,      
}
LAGraph_Contents_kind ;
typedef struct
{
    void *blob ;
    size_t blob_size ;
    LAGraph_Contents_kind kind ;
    int compression ;
    char name [LAGRAPH_MAX_NAME_LEN+4] ;
    char type_name [LAGRAPH_MAX_NAME_LEN+4] ;
}
LAGraph_Contents ;
LAGRAPHX_PUBLIC
int LAGraph_AllKTruss   
(
    GrB_Matrix *Cset,   
    int64_t *kmax,      
    int64_t *ntris,     
    int64_t *nedges,    
    int64_t *nstepss,   
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_KTruss      
(
    GrB_Matrix *C,      
    LAGraph_Graph G,    
    uint32_t k,         
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_cc_lacc (
    GrB_Vector *result,
    GrB_Matrix A,
    bool sanitize,
    char *msg
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_basic
(
    GrB_Vector *pd_output,
    const GrB_Matrix A,
    const GrB_Index s
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_basic_pushpull
(
    GrB_Vector *pd_output,
    const GrB_Matrix A,
    const GrB_Matrix AT,
    const GrB_Index s
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_basic_mxv
(
    GrB_Vector *pd_output,      
    const GrB_Matrix AT,        
    const GrB_Index s           
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_full
(
    GrB_Vector *pd_output,
    GrB_Vector *ppi_output,
    GrB_Vector *ph_output,
    const GrB_Matrix A,
    const GrB_Index s
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_full1
(
    GrB_Vector *pd_output,
    GrB_Vector *ppi_output,
    GrB_Vector *ph_output,
    const GrB_Matrix A,
    const GrB_Index s
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_full1a
(
    GrB_Vector *pd_output,
    GrB_Vector *ppi_output,
    GrB_Vector *ph_output,
    const GrB_Matrix A,
    const GrB_Index s
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_full2
(
    GrB_Vector *pd_output,      
    GrB_Vector *ppi_output,     
    GrB_Vector *ph_output,      
    const GrB_Matrix A,         
    const GrB_Index s           
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_full_mxv
(
    GrB_Vector *pd_output,
    GrB_Vector *ppi_output,
    GrB_Vector *ph_output,
    const GrB_Matrix AT,
    const GrB_Index s
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_pure_c
(
    int32_t **pd,
    int64_t **ppi,
    const int64_t s,
    const int64_t n,
    const int64_t nz,
    const int64_t *Ilist,
    const int64_t *J,
    const int32_t *W
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_BF_pure_c_double
(
    double **pd,
    int64_t **ppi,
    const int64_t s,
    const int64_t n,
    const int64_t nz,
    const int64_t *Ilist,
    const int64_t *J,
    const double  *W
) ;
LAGRAPHX_PUBLIC
int LAGraph_cdlp
(
    GrB_Vector *CDLP_handle,
    const GrB_Matrix A,
    bool symmetric,
    bool sanitize,
    int itermax,
    double *t,
    char *msg
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_dnn
(
    GrB_Matrix *Yhandle,
    GrB_Matrix *W,
    GrB_Matrix *Bias,
    int nlayers,
    GrB_Matrix Y0
) ;
LAGRAPHX_PUBLIC
GrB_Info LAGraph_FW
(
    const GrB_Matrix G,
    GrB_Matrix *D,
    GrB_Type   *D_type
) ;
LAGRAPHX_PUBLIC
int LAGraph_lcc            
(
    GrB_Vector *LCC_handle,     
    const GrB_Matrix A,         
    bool symmetric,             
    bool sanitize,              
    double t [2],               
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_msf
(
    GrB_Matrix *result, 
    GrB_Matrix A,       
    bool sanitize,      
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_scc (
    GrB_Vector *result,     
    GrB_Matrix A,           
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_VertexCentrality_Triangle       
(
    GrB_Vector *centrality,     
    uint64_t *ntriangles,       
    int method,                 
    LAGraph_Graph G,            
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_MaximalIndependentSet       
(
    GrB_Vector *mis,            
    LAGraph_Graph G,            
    uint64_t seed,              
    GrB_Vector ignore_node,     
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_KCore_All
(
    GrB_Vector *decomp,     
    uint64_t *kmax,
    LAGraph_Graph G,            
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_KCore
(
    GrB_Vector *decomp,     
    LAGraph_Graph G,        
    uint64_t k,             
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_KCore_Decompose
(
    GrB_Matrix *D,              
    LAGraph_Graph G,            
    GrB_Vector decomp,         
    uint64_t k,
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_FastGraphletTransform
(
    GrB_Matrix *F_net,  
    LAGraph_Graph G,
    bool compute_d_15,  
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_SquareClustering
(
    GrB_Vector *square_clustering,
    LAGraph_Graph G,
    char *msg
) ;
LAGRAPHX_PUBLIC
int LAGraph_HelloWorld 
(
    GrB_Matrix *Yhandle,    
    LAGraph_Graph G,
    char *msg
) ;