graph/src/graph/graphblas/lagraphx_bindings.rs

/* automatically generated by rust-bindgen 0.72.0, then manually trimmed */

// Auto-generated LAGraphX FFI bindings (experimental algorithms)
// Duplicated types/constants/functions from LAGraph.h have been removed.
// Only LAGraphX-specific items remain.
#![allow(
    non_camel_case_types,
    non_upper_case_globals,
    non_snake_case,
    dead_code,
    improper_ctypes
)]

use super::lagraph_bindings::{
    LAGr_TriangleCount_Method, LAGr_TriangleCount_Presort, LAGraph_Graph, LAGraph_PrintLevel,
};
use super::{
    GrB_BinaryOp, GrB_Descriptor, GrB_Index, GrB_Info, GrB_Matrix, GrB_Monoid, GrB_Scalar,
    GrB_Semiring, GrB_Type, GrB_Vector,
};

// LAGraphX-specific constant
pub const LAGRAPH_INSUFFICIENT_SWAPS: u32 = 2100;

// ---- Experimental algorithm types ----

#[repr(i32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGraph_Contents_kind {
    LAGraph_unknown_kind = -1,
    LAGraph_matrix_kind = 0,
    LAGraph_vector_kind = 1,
    LAGraph_text_kind = 2,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LAGraph_Contents {
    pub blob: *mut ::std::os::raw::c_void,
    pub blob_size: usize,
    pub kind: LAGraph_Contents_kind,
    pub compression: ::std::os::raw::c_int,
    pub name: [::std::os::raw::c_char; 132usize],
    pub type_name: [::std::os::raw::c_char; 132usize],
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGraph_Matching_kind {
    LAGraph_Matching_unweighted = 0,
    LAGraph_Matching_heavy = 1,
    LAGraph_Matching_light = 2,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LAGraph_rule_WCNF {
    pub nonterm: i32,
    pub prod_A: i32,
    pub prod_B: i32,
    pub index: i32,
}

// ---- Experimental extern functions ----

unsafe extern "C" {
    pub fn LAGraph_Random_Matrix(
        A: *mut GrB_Matrix,
        type_: GrB_Type,
        nrows: GrB_Index,
        ncols: GrB_Index,
        density: f64,
        seed: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> GrB_Info;

    pub fn LAGraph_Incidence_Matrix(
        result: *mut GrB_Matrix,
        graph: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_Hash_Vector(
        hash: *mut u64,
        v: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_FastAssign_Monoid(
        c: GrB_Vector,
        mask: GrB_Vector,
        accum: GrB_BinaryOp,
        I_vec: GrB_Vector,
        X_vec: GrB_Vector,
        ramp: GrB_Vector,
        dup: GrB_Monoid,
        desc: GrB_Descriptor,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_FastAssign_Semiring(
        c: GrB_Vector,
        mask: GrB_Vector,
        accum: GrB_BinaryOp,
        I_vec: GrB_Vector,
        X_vec: GrB_Vector,
        ramp: GrB_Vector,
        dup: GrB_Semiring,
        desc: GrB_Descriptor,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_AllKTruss(
        Cset: *mut GrB_Matrix,
        kmax: *mut i64,
        ntris: *mut i64,
        nedges: *mut i64,
        nstepss: *mut i64,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_KTruss(
        C: *mut GrB_Matrix,
        G: LAGraph_Graph,
        k: u32,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_cc_lacc(
        result: *mut GrB_Vector,
        A: GrB_Matrix,
        sanitize: bool,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_BF_basic(
        pd_output: *mut GrB_Vector,
        A: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_basic_pushpull(
        pd_output: *mut GrB_Vector,
        A: GrB_Matrix,
        AT: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_basic_mxv(
        pd_output: *mut GrB_Vector,
        AT: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_full(
        pd_output: *mut GrB_Vector,
        ppi_output: *mut GrB_Vector,
        ph_output: *mut GrB_Vector,
        A: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_full1(
        pd_output: *mut GrB_Vector,
        ppi_output: *mut GrB_Vector,
        ph_output: *mut GrB_Vector,
        A: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_full1a(
        pd_output: *mut GrB_Vector,
        ppi_output: *mut GrB_Vector,
        ph_output: *mut GrB_Vector,
        A: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_full2(
        pd_output: *mut GrB_Vector,
        ppi_output: *mut GrB_Vector,
        ph_output: *mut GrB_Vector,
        A: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_full_mxv(
        pd_output: *mut GrB_Vector,
        ppi_output: *mut GrB_Vector,
        ph_output: *mut GrB_Vector,
        AT: GrB_Matrix,
        s: GrB_Index,
    ) -> GrB_Info;

    pub fn LAGraph_BF_pure_c(
        pd: *mut *mut i32,
        ppi: *mut *mut i64,
        s: i64,
        n: i64,
        nz: i64,
        Ilist: *const i64,
        J: *const i64,
        W: *const i32,
    ) -> GrB_Info;

    pub fn LAGraph_BF_pure_c_double(
        pd: *mut *mut f64,
        ppi: *mut *mut i64,
        s: i64,
        n: i64,
        nz: i64,
        Ilist: *const i64,
        J: *const i64,
        W: *const f64,
    ) -> GrB_Info;

    pub fn LAGraph_cdlp(
        CDLP_handle: *mut GrB_Vector,
        G: LAGraph_Graph,
        itermax: ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_cdlp_withsort(
        CDLP_handle: *mut GrB_Vector,
        G: LAGraph_Graph,
        itermax: ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGr_PageRankGX(
        centrality: *mut GrB_Vector,
        iters: *mut ::std::os::raw::c_int,
        G: LAGraph_Graph,
        damping: f32,
        itermax: ::std::os::raw::c_int,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_dnn(
        Yhandle: *mut GrB_Matrix,
        W: *mut GrB_Matrix,
        Bias: *mut GrB_Matrix,
        nlayers: ::std::os::raw::c_int,
        Y0: GrB_Matrix,
    ) -> GrB_Info;

    pub fn LAGraph_FW(
        G: GrB_Matrix,
        D: *mut GrB_Matrix,
        D_type: *mut GrB_Type,
    ) -> GrB_Info;

    pub fn LAGraph_lcc(
        LCC_handle: *mut GrB_Vector,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_msf(
        forest_edges: *mut GrB_Matrix,
        componentId: *mut GrB_Vector,
        A: GrB_Matrix,
        sanitize: bool,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_scc(
        result: *mut GrB_Vector,
        A: GrB_Matrix,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_RegularPathQuery(
        reachable: *mut GrB_Vector,
        R: *mut LAGraph_Graph,
        nl: usize,
        QS: *const GrB_Index,
        nqs: usize,
        QF: *const GrB_Index,
        nqf: usize,
        G: *mut LAGraph_Graph,
        S: *const GrB_Index,
        ns: usize,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_VertexCentrality_Triangle(
        centrality: *mut GrB_Vector,
        ntriangles: *mut u64,
        method: ::std::os::raw::c_int,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_MaximalIndependentSet(
        mis: *mut GrB_Vector,
        G: LAGraph_Graph,
        seed: u64,
        ignore_node: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_KCore_All(
        decomp: *mut GrB_Vector,
        kmax: *mut u64,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_KCore(
        decomp: *mut GrB_Vector,
        G: LAGraph_Graph,
        k: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_KCore_Decompose(
        D: *mut GrB_Matrix,
        G: LAGraph_Graph,
        decomp: GrB_Vector,
        k: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_FastGraphletTransform(
        F_net: *mut GrB_Matrix,
        G: LAGraph_Graph,
        compute_d_15: bool,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_MaximalMatching(
        matching: *mut GrB_Vector,
        E: GrB_Matrix,
        E_t: GrB_Matrix,
        matching_type: LAGraph_Matching_kind,
        seed: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_Coarsen_Matching(
        coarsened: *mut GrB_Matrix,
        parent_result: *mut GrB_Vector,
        newlabel_result: *mut GrB_Vector,
        inv_newlabel_result: *mut GrB_Vector,
        G: LAGraph_Graph,
        matching_type: LAGraph_Matching_kind,
        preserve_mapping: bool,
        combine_weights: bool,
        seed: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_SquareClustering(
        square_clustering: *mut GrB_Vector,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_CFL_reachability(
        outputs: *mut GrB_Matrix,
        adj_matrices: *const GrB_Matrix,
        terms_count: i64,
        nonterms_count: i64,
        rules: *const LAGraph_rule_WCNF,
        rules_count: i64,
        msg: *mut ::std::os::raw::c_char,
    ) -> GrB_Info;

    pub fn LAGraph_HelloWorld(
        Yhandle: *mut GrB_Matrix,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_MultiSourceBFS(
        level: *mut GrB_Matrix,
        parent: *mut GrB_Matrix,
        G: LAGraph_Graph,
        src: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_EstimateDiameter(
        diameter: *mut GrB_Index,
        peripheral: *mut GrB_Vector,
        G: LAGraph_Graph,
        maxSrcs: GrB_Index,
        maxLoops: GrB_Index,
        seed: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_ExactDiameter(
        diameter: *mut GrB_Index,
        peripheral: *mut GrB_Vector,
        eccentricity: *mut GrB_Vector,
        G: LAGraph_Graph,
        k: GrB_Index,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_Happly(
        y: GrB_Vector,
        u: GrB_Vector,
        x: GrB_Vector,
        alpha: f32,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_hmhx(
        z: GrB_Vector,
        M: GrB_Matrix,
        u: GrB_Vector,
        x: GrB_Vector,
        alpha: f32,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_norm2(
        norm2: *mut f32,
        v: GrB_Vector,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_Laplacian(
        Lap: *mut GrB_Matrix,
        inform: *mut f32,
        G: GrB_Matrix,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;

    pub fn LAGraph_mypcg2(
        steper: *mut GrB_Vector,
        k_result: *mut GrB_Index,
        L: GrB_Matrix,
        u: GrB_Vector,
        malpha: f32,
        invdiag: GrB_Matrix,
        b: GrB_Vector,
        tol: f32,
        maxit: f32,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
